--- a/app/templates/picture.html
+++ b/app/templates/picture.html
@@ -27,8 +27,6 @@
 
 <body>
 
-  <a href="https://github.com/makkoncept/colorpalette"><img style="position: absolute; top: 0; right: 0; border: 0;"
-      src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -37,7 +35,7 @@
       <h3 style="text-align: center;">Your Image</h3>
       <p style="text-align: center;">Right click on it, and select "save image as" to download it. The downloaded image
         will be of Original Size</p>
-      <p style="text-align: center;">Try <a href="{{url_for('index')}}">Again</a>?</p>
+      <h4 style="text-align: center;"><a href="{{url_for('decode')}}">Decode the message ?</a></h4>
     </div>
     <div>
       <img src="{{src}}" height="{{height}}" width="{{width}}" style="margin-left: auto; margin-right: auto; display: block">
