--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,7 @@
 <head>
 
     <meta charset="utf-8">
-    <title>Color-Palette</title>
+    <title>Steganography</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -39,32 +39,20 @@
             <h4 style="display: inline; margin-right: 5%"><strong><a href="{{url_for('index')}}">Encoding</a></strong></h4>
             <h4 style="display: inline"><strong><a href="{{url_for('decode')}}">Decoding</a></strong></h4>
         </div>
-        <!-- <div class="row">
-            <div class="six columns" style="padding-right: 10px">
-                <img src="{{url_for('static', filename='images/3.jpg')}}" width="450" height="310">
-
-            </div>
-            <div class="six columns" style="padding-left: 10px">
-                <img src="{{url_for('static', filename='images/4.jpg')}}" width="450" height="310">
-            </div>
-        </div> -->
         <div style="padding-top: 40px">
-            <!-- <h3>Try It Now</h3> -->
             <p>Hide secret message in an image. Upload a PNG image file and write a message. Using the stegano library,
                 the message will be encoded into the image. </p>
             <p><strong><u>You can then save the image and send it to a friend</u></strong>, who
                 can then <strong><a href="{{url_for('decode')}}">DECODE</a></strong> the message in it.</p>
             <form method="POST" enctype="multipart/form-data">
                 {{form.hidden_tag()}}
-                <!-- <div class="row"> -->
-                <!-- <div class="six columns"> -->
                 <label>Secret message (less than 100 charachters)</label>
                 {{form.message(class="u-full-width")}}
-                {% for error in form.message.errors %}
+                {% for error in form.message.ors %}
                 <span style="color:red;">{{ error}}</span>
                 {% endfor %}
                 <h5><u>Optional</u></h5>
-                <p>Upload a PNG image( <u>or don't to use a default</u>)</p>
+                <p>Upload a PNG image( <u>or don't to use a default image</u>)</p>
                 <div>
                     {{form.photo()}}
                     {% for error in form.photo.errors %}
