minor fix in templates

--- a/app/templates/decode.html
+++ b/app/templates/decode.html
@@ -43,7 +43,7 @@
             {% else %}
             <h3 style="text-align: center;"><u>Hidden Message</u></h3>
             <hr>
-            <h4>{{hidden_message}}</h4>
+            <h4 style=" color: blueviolet;">{{hidden_message}}</h4>
             <hr>
             {% endif %}
             {% endif %}
