--- a/app/templates/picture.html
+++ b/app/templates/picture.html
@@ -34,7 +34,7 @@
     <div style="margin-top: 5%">
       <h3 style="text-align: center;">Your Image</h3>
       <p style="text-align: center;">Right click on it, and select "save image as" to download it. The downloaded image
-        will be of Original Size</p>
+        will be of Original Size. <strong>Send it to your friend or decode the message yourself</strong>.</p>
       <h4 style="text-align: center;"><a href="{{url_for('decode')}}">Decode the message ?</a></h4>
     </div>
     <div>
