Change the title and main heading.
Steganography > Steganoweb

--- a/app/templates/picture.html
+++ b/app/templates/picture.html
@@ -4,7 +4,7 @@
 <head>
 
   <meta charset="utf-8">
-  <title>Steganography</title>
+  <title>Steganoweb</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
