--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -4,6 +4,47 @@
   justify-content: center;
 }
 
+.image-wrapper {
+  width: 80%;
+  margin: auto;
+  position: relative;
+}
+
+.image-wrapper img {
+  display: block;
+  margin: auto;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.image-wrapper a.button {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  opacity: 0;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0);
+  transition: background 0.5s ease;
+}
+
+.image-wrapper:hover .overlay {
+  display: block;
+  background: rgba(0, 0, 0, 0.3);
+}
+
+.image-wrapper:hover a.button {
+  opacity: 1;
+}
+
 /* For github corner. credit: https://github.com/tholman/github-corners */
 .github-corner:hover .octo-arm {
   animation: octocat-wave 560ms ease-in-out;
