add favicon icons

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -2,11 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Steganoweb</title>
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Encode(and decode) a hidden message in an image." />
+    <meta name="author" content="Mayank Nader" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:site_name" content="Steganoweb" />
+    <meta property="og:title" content="Steganoweb" />
+    <meta property="og:description" content="Encode(and decode) a hidden message in an image." />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Steganoweb" />
+    <meta name="twitter:description" content="Encode(and decode) a hidden message in an image." />
+    <meta property="og:url" content="https://steganoweb.xyz" />
+
+    <title>Steganoweb</title>
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/images/favicon/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/images/favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/images/favicon/favicon-16x16.png" />
+    <link rel="icon" type="image/x-icon" href="/static/images/favicon/favicon.ico" />
+    <link rel="manifest" href="/static/images/favicon/site.webmanifest" />
 
     <link href="//fonts.googleapis.com/css?family=Raleway:400,300,500,600" rel="stylesheet" type="text/css" />
 
