--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -58,5 +58,6 @@
       </svg>
     </a>
     <div class="container">{% block content %}{% endblock %}</div>
+    <script src="/static/js/script.js"></script>
   </body>
 </html>
